# mndot-bid-v2

./: LICENSE  README.md
backend/: .gitignore  Dockerfile  PRODUCTION.md  README.md  pyproject.toml
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/dbt/mndot_bid/: dbt_project.yml  profiles.yml
backend/dbt/mndot_bid/models/: item_matrix.sql  schema.yml
backend/dbt/mndot_bid/models/clean/: clean_bidders.sql  clean_bids.sql  clean_contracts.sql  clean_items.sql
backend/dbt/mndot_bid/models/export/: exp_prod_bids.sql  exp_prod_item_search.sql  exp_prod_item_weighted_avg_by_year.sql
backend/dbt/mndot_bid/models/interim/: int_lowest_bid.sql  int_spec_year_matrix.sql
backend/dbt/mndot_bid/models/prod/: prod_bids.sql  prod_item_search.sql  prod_item_weighted_avg_by_year.sql
backend/dbt/mndot_bid/models/raw/: raw_bidders.sql  raw_bids.sql  raw_contracts.sql  raw_items.sql  source.yml
backend/dbt/mndot_bid/models/staged/: source.yml  stg_bidders.sql  stg_bids.sql  stg_contracts.sql  stg_items.sql
backend/dbt/mndot_bid/tests/: assert_item_is_in_spec.sql
backend/scripts/: update_prod_parquets.sh
backend/src/: cli.py  configure_logging.py  logging.py  settings.py
backend/src/abstract/: cli.py  pipeline.py
backend/src/abstract/stages/clean/: __init__.py  clean_bid.py  clean_bidder.py  clean_contract.py  validate.py
backend/src/database/: cli.py  db.py
backend/src/database/abstract_pipeline/: __init__.py  enums.py  operations.py
backend/src/database/pipeline_status/: __init__.py  enums.py  operations.py
backend/src/database/raw_bidders/: __init__.py  operations.py
backend/src/database/raw_bids/: __init__.py  operations.py
backend/src/database/raw_contracts/: __init__.py  operations.py
backend/src/database/tables/: abstract_pipeline.py  clean_bidders.py  clean_bids.py  clean_contracts.py  clean_items.py  item_pipeline.py  raw_bidders.py  raw_bids.py  raw_contracts.py  raw_items.py
backend/src/database/types/: status.py
backend/src/database/views/: failed_abstract_pipeline.py
backend/src/db/: cli.py  init_db.py  init_db.sql
backend/src/dbt/: cli.py
backend/src/extract/: cli.py  download_abstracts.py  download_item_list.py  payload_abstract.json  payload_item_list.json  scrape_contract_ids.py
backend/src/item/: cli.py  pipeline.py
backend/src/production/: cli.py  s3.py
backend/src/s3/: cli.py  rclone.py
backend/src/transform/: clean_bid.py  clean_bidder.py  clean_contract.py  cli.py  split_abstracts.py
backend/tests/abstract/: test_download_stage.py  test_scrape_stage.py  test_split_stage.py
backend/tests/db/: mock_db.py  mock_db.sql
backend/tests/db/abstract_pipeline/: test_get_ids_with_status.py  test_insert_new_records.py  test_update_status.py
backend/tests/db/pipeline_status/: test_get_ids_with_status.py  test_insert_new_records.py  test_update_status.py
(+46 files in other folders)
