[tool.poetry]
name = "mndot-bid-backend"
version = "0.1.0"
description = ""
authors = ["Devin Power <dpwr16@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mndot_bid_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
click = "^8.1.3"
pydantic = "^1.10.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
black = "^23.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
