[tool.poetry]
name = "mndot-bid-backend"
version = "0.1.0"
description = ""
authors = ["Devin Power <dpwr16@gmail.com>"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
click = "^8.1.3"
pydantic = "^2.0.3"
beautifulsoup4 = "^4.12.2"
loguru = "^0.7.0"
polars = {extras = ["pyarrow"], version = "^0.18.4"}
duckdb = "^0.8.1"
dbt-duckdb = "^1.5.2"
boto3 = "^1.28.4"
pydantic-settings = "^2.0.2"
boto3-stubs = {extras = ["essential"], version = "^1.28.4"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"
pyright = "^1.1.316"

[tool.poetry.scripts]
mndot-bid-cli = "src.cli:cli"
refresh-and-publish = "src.production.cli:refresh_and_publish"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
